@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -316,8 +316,8 @@ public class getvaluesii001 {
 
                     // Check element's value
                     if (element != CHAR[j + i]) {
-                        Character c = new Character('c');
-                         Integer  n = new Integer(0);
+                        Character c = Character.valueOf('c');
+                         Integer  n = Integer.valueOf(0);
                         String sReal = n.toHexString(
                                            c.getNumericValue(CHAR[j + i])
                                        );
@@ -347,12 +347,12 @@ public class getvaluesii001 {
                         testFailed = true;
                         continue;
                     }
-                    element = new Double(doubleValue.value());
+                    element = Double.valueOf(doubleValue.value());
                     log.display("debuger> " + i + " field has " + j
                               + " element " + element);
 
                     // Check element's value
-                    if (!element.equals(new Double(DOUB[j + i]))) {
+                    if (!element.equals(Double.valueOf(DOUB[j + i]))) {
                         log.complain("debuger FAILURE D2> " + j + " element "
                                    + "of array " + name + " was expected "
                                    + DOUB[j + i] + ", but returned " + element);
@@ -375,12 +375,12 @@ public class getvaluesii001 {
                         testFailed = true;
                         continue;
                     }
-                    element = new Float(floatValue.value());
+                    element = Float.valueOf(floatValue.value());
                     log.display("debuger> " + i + " field has " + j
                               + " element " + element);
 
                     // Check element's value
-                    if (!element.equals(new Float(FLOAT[j + i]))) {
+                    if (!element.equals(Float.valueOf(FLOAT[j + i]))) {
                         log.complain("debuger FAILURE F2> " + j + " element "
                                    + "of array " + name + " was expected "
                                    + FLOAT[j + i] + ", but returned "
