@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -208,8 +208,8 @@ public class except004 {
 
         // Prepare some items, which will be used by the test:
         Object stringArray[] = new String[1];
-        Object integerValue = new Integer(0);
-        Object doubleValue = new Double(0);
+        Object integerValue = Integer.valueOf(0);
+        Object doubleValue = Double.valueOf(0);
         Object trash = null;
         Field abraIntegerField;
         Field abraBooleanField;
