@@ -70,7 +70,7 @@ import org.w3c.dom.ls.LSSerializer;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true test.auctionportal.AuctionController
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow test.auctionportal.AuctionController
  * @run testng/othervm test.auctionportal.AuctionController
  */
 @Listeners({jaxp.library.FilePolicy.class})
