@@ -59,7 +59,7 @@ import org.xml.sax.SAXException;
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true dom.DOMConfigurationTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow dom.DOMConfigurationTest
  * @run testng/othervm dom.DOMConfigurationTest
  * @summary Test DOMConfiguration for supported properties.
  */
