@@ -50,7 +50,7 @@ import org.testng.annotations.Test;
  * @test
  * @bug 6935697
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true transform.BugDB12665704Test
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.BugDB12665704Test
  * @run testng/othervm transform.BugDB12665704Test
  * @summary Test Transformer can compile large xsl file.
  */
