@@ -37,7 +37,7 @@ import org.xml.sax.SAXException;
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true validation.TCKGroupA008Test
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow validation.TCKGroupA008Test
  * @run testng/othervm validation.TCKGroupA008Test
  * @summary Test groupA008.xsd.
  */
