@@ -25,6 +25,7 @@
  * @test
  * @bug 8027066
  * @summary Tests that the same array can be encoded twice
+ * @run main/othervm -Djava.security.manager=allow Test8027066
  * @author Anton Nashatyrev
  */
 public class Test8027066 extends AbstractTest<String[][]> {
