@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -22,12 +22,18 @@
  *
  */
 
-import jdk.incubator.foreign.GroupLayout;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.Addressable;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.GroupLayout;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
 
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.util.ArrayList;
 import java.util.List;
@@ -35,26 +41,35 @@ import java.util.Stack;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 import org.testng.annotations.*;
 
-import static jdk.incubator.foreign.CLinker.*;
 import static org.testng.Assert.*;
 
 public class CallGeneratorHelper extends NativeTestHelper {
 
+    static final List<MemoryLayout> STACK_PREFIX_LAYOUTS = Stream.concat(
+            Stream.generate(() -> (MemoryLayout) C_LONG_LONG).limit(8),
+            Stream.generate(() -> (MemoryLayout)  C_DOUBLE).limit(8)
+        ).toList();
+
+    static SegmentAllocator THROWING_ALLOCATOR = (size, align) -> {
+        throw new UnsupportedOperationException();
+    };
+
+    static final int SAMPLE_FACTOR = Integer.parseInt((String)System.getProperties().getOrDefault("generator.sample.factor", "-1"));
+
     static final int MAX_FIELDS = 3;
     static final int MAX_PARAMS = 3;
     static final int CHUNK_SIZE = 600;
-
-    static int functions = 0;
 
     public static void assertStructEquals(MemorySegment actual, MemorySegment expected, MemoryLayout layout) {
         assertEquals(actual.byteSize(), expected.byteSize());
         GroupLayout g = (GroupLayout) layout;
         for (MemoryLayout field : g.memberLayouts()) {
             if (field instanceof ValueLayout) {
-                VarHandle vh = g.varHandle(vhCarrier(field), MemoryLayout.PathElement.groupElement(field.name().orElseThrow()));
+                VarHandle vh = g.varHandle(MemoryLayout.PathElement.groupElement(field.name().orElseThrow()));
                 assertEquals(vh.get(actual), vh.get(expected));
             }
         }
@@ -135,17 +150,23 @@ public class CallGeneratorHelper extends NativeTestHelper {
             if (this == STRUCT) {
                 long offset = 0L;
                 List<MemoryLayout> layouts = new ArrayList<>();
+                long align = 0;
                 for (StructFieldType field : fields) {
                     MemoryLayout l = field.layout();
-                    long padding = offset % l.bitSize();
+                    long padding = offset % l.bitAlignment();
                     if (padding != 0) {
-                        layouts.add(MemoryLayout.ofPaddingBits(padding));
+                        layouts.add(MemoryLayout.paddingLayout(padding));
                         offset += padding;
                     }
                     layouts.add(l.withName("field" + offset));
+                    align = Math.max(align, l.bitAlignment());
                     offset += l.bitSize();
                 }
-                return MemoryLayout.ofStruct(layouts.toArray(new MemoryLayout[0]));
+                long padding = offset % align;
+                if (padding != 0) {
+                    layouts.add(MemoryLayout.paddingLayout(padding));
+                }
+                return MemoryLayout.structLayout(layouts.toArray(new MemoryLayout[0]));
             } else {
                 return layout;
             }
@@ -182,6 +203,7 @@ public class CallGeneratorHelper extends NativeTestHelper {
 
     @DataProvider(name = "functions")
     public static Object[][] functions() {
+        int functions = 0;
         List<Object[]> downcalls = new ArrayList<>();
         for (Ret r : Ret.values()) {
             for (int i = 0; i <= MAX_PARAMS; i++) {
@@ -193,16 +215,22 @@ public class CallGeneratorHelper extends NativeTestHelper {
                         for (int j = 1; j <= MAX_FIELDS; j++) {
                             for (List<StructFieldType> fields : StructFieldType.perms(j)) {
                                 String structCode = sigCode(fields);
+                                int count = functions;
                                 int fCode = functions++ / CHUNK_SIZE;
                                 String fName = String.format("f%d_%s_%s_%s", fCode, retCode, sigCode, structCode);
-                                downcalls.add(new Object[] { fName, r, ptypes, fields });
+                                if (SAMPLE_FACTOR == -1 || (count % SAMPLE_FACTOR) == 0) {
+                                    downcalls.add(new Object[]{count, fName, r, ptypes, fields});
+                                }
                             }
                         }
                     } else {
                         String structCode = sigCode(List.<StructFieldType>of());
+                        int count = functions;
                         int fCode = functions++ / CHUNK_SIZE;
                         String fName = String.format("f%d_%s_%s_%s", fCode, retCode, sigCode, structCode);
-                        downcalls.add(new Object[] { fName, r, ptypes, List.of() });
+                        if (SAMPLE_FACTOR == -1 || (count % SAMPLE_FACTOR) == 0) {
+                            downcalls.add(new Object[]{count, fName, r, ptypes, List.of()});
+                        }
                     }
                 }
             }
@@ -357,19 +385,17 @@ public class CallGeneratorHelper extends NativeTestHelper {
     //helper methods
 
     @SuppressWarnings("unchecked")
-    static Object makeArg(MemoryLayout layout, List<Consumer<Object>> checks, boolean check, List<MemorySegment> segments) throws ReflectiveOperationException {
+    static Object makeArg(MemoryLayout layout, List<Consumer<Object>> checks, boolean check) throws ReflectiveOperationException {
         if (layout instanceof GroupLayout) {
-            MemorySegment segment = MemorySegment.allocateNative(layout);
-            initStruct(segment, (GroupLayout)layout, checks, check, segments);
-            segments.add(segment);
+            MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+            initStruct(segment, (GroupLayout)layout, checks, check);
             return segment;
         } else if (isPointer(layout)) {
-            MemorySegment segment = MemorySegment.allocateNative(1);
-            segments.add(segment);
+            MemorySegment segment = MemorySegment.allocateNative(1, MemorySession.openImplicit());
             if (check) {
                 checks.add(o -> {
                     try {
-                        assertEquals((MemoryAddress)o, segment.address());
+                        assertEquals(o, segment.address());
                     } catch (Throwable ex) {
                         throw new IllegalStateException(ex);
                     }
@@ -398,15 +424,12 @@ public class CallGeneratorHelper extends NativeTestHelper {
         }
     }
 
-    static void initStruct(MemorySegment str, GroupLayout g, List<Consumer<Object>> checks, boolean check, List<MemorySegment> segments) throws ReflectiveOperationException {
+    static void initStruct(MemorySegment str, GroupLayout g, List<Consumer<Object>> checks, boolean check) throws ReflectiveOperationException {
         for (MemoryLayout l : g.memberLayouts()) {
             if (l.isPadding()) continue;
-            VarHandle accessor = g.varHandle(structFieldCarrier(l), MemoryLayout.PathElement.groupElement(l.name().get()));
+            VarHandle accessor = g.varHandle(MemoryLayout.PathElement.groupElement(l.name().get()));
             List<Consumer<Object>> fieldsCheck = new ArrayList<>();
-            Object value = makeArg(l, fieldsCheck, check, segments);
-            if (isPointer(l)) {
-                value = ((MemoryAddress)value).toRawLongValue();
-            }
+            Object value = makeArg(l, fieldsCheck, check);
             //set value
             accessor.set(str, value);
             //add check
@@ -415,11 +438,7 @@ public class CallGeneratorHelper extends NativeTestHelper {
                 checks.add(o -> {
                     MemorySegment actual = (MemorySegment)o;
                     try {
-                        if (isPointer(l)) {
-                            fieldsCheck.get(0).accept(MemoryAddress.ofLong((long)accessor.get(actual)));
-                        } else {
-                            fieldsCheck.get(0).accept(accessor.get(actual));
-                        }
+                        fieldsCheck.get(0).accept(accessor.get(actual));
                     } catch (Throwable ex) {
                         throw new IllegalStateException(ex);
                     }
@@ -428,37 +447,23 @@ public class CallGeneratorHelper extends NativeTestHelper {
         }
     }
 
-    static Class<?> structFieldCarrier(MemoryLayout layout) {
-        if (isPointer(layout)) {
-            return long.class;
-        } else if (layout instanceof ValueLayout) {
-            if (isIntegral(layout)) {
-                return int.class;
-            } else if (layout.bitSize() == 32) {
-                return float.class;
-            } else {
-                return double.class;
-            }
+    static Class<?> carrier(MemoryLayout layout, boolean param) {
+        if (layout instanceof GroupLayout) {
+            return MemorySegment.class;
+        } if (isPointer(layout)) {
+            return param ? Addressable.class : MemoryAddress.class;
+        } else if (layout instanceof ValueLayout valueLayout) {
+            return valueLayout.carrier();
         } else {
             throw new IllegalStateException("Unexpected layout: " + layout);
         }
     }
 
-    static Class<?> paramCarrier(MemoryLayout layout) {
-        if (layout instanceof GroupLayout) {
-            return MemorySegment.class;
-        } if (isPointer(layout)) {
-            return MemoryAddress.class;
-        } else if (layout instanceof ValueLayout) {
-            if (isIntegral(layout)) {
-                return int.class;
-            } else if (layout.bitSize() == 32) {
-                return float.class;
-            } else {
-                return double.class;
-            }
-        } else {
-            throw new IllegalStateException("Unexpected layout: " + layout);
+    MethodHandle downcallHandle(Linker abi, Addressable symbol, SegmentAllocator allocator, FunctionDescriptor descriptor) {
+        MethodHandle mh = abi.downcallHandle(symbol, descriptor);
+        if (descriptor.returnLayout().isPresent() && descriptor.returnLayout().get() instanceof GroupLayout) {
+            mh = mh.bindTo(allocator);
         }
+        return mh;
     }
 }
