@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -22,21 +22,92 @@
  *
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.MemoryLayout;
+import java.lang.foreign.Addressable;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.SymbolLookup;
+import java.lang.foreign.ValueLayout;
+
+import java.lang.invoke.MethodHandle;
 
 public class NativeTestHelper {
 
-    static CLinker.TypeKind kind(MemoryLayout layout) {
-        return (CLinker.TypeKind)layout.attribute(CLinker.TypeKind.ATTR_NAME).orElseThrow(
-                () -> new IllegalStateException("Unexpected value layout: could not determine ABI class"));
+    public static boolean isIntegral(MemoryLayout layout) {
+        return layout instanceof ValueLayout valueLayout && isIntegral(valueLayout.carrier());
     }
 
-    public static boolean isIntegral(MemoryLayout layout) {
-        return kind(layout).isIntegral();
+    static boolean isIntegral(Class<?> clazz) {
+        return clazz == byte.class || clazz == char.class || clazz == short.class
+                || clazz == int.class || clazz == long.class;
     }
 
     public static boolean isPointer(MemoryLayout layout) {
-        return kind(layout).isPointer();
+        return layout instanceof ValueLayout valueLayout && valueLayout.carrier() == MemoryAddress.class;
+    }
+
+    // the constants below are useful aliases for C types. The type/carrier association is only valid for 64-bit platforms.
+
+    /**
+     * The layout for the {@code bool} C type
+     */
+    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
+    /**
+     * The layout for the {@code char} C type
+     */
+    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
+    /**
+     * The layout for the {@code short} C type
+     */
+    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT.withBitAlignment(16);
+    /**
+     * The layout for the {@code int} C type
+     */
+    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT.withBitAlignment(32);
+
+    /**
+     * The layout for the {@code long long} C type.
+     */
+    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG.withBitAlignment(64);
+    /**
+     * The layout for the {@code float} C type
+     */
+    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT.withBitAlignment(32);
+    /**
+     * The layout for the {@code double} C type
+     */
+    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE.withBitAlignment(64);
+    /**
+     * The {@code T*} native type.
+     */
+    public static final ValueLayout.OfAddress C_POINTER = ValueLayout.ADDRESS.withBitAlignment(64);
+
+    private static Linker LINKER = Linker.nativeLinker();
+
+    private static final MethodHandle FREE = LINKER.downcallHandle(
+            LINKER.defaultLookup().lookup("free").get(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
+
+    private static final MethodHandle MALLOC = LINKER.downcallHandle(
+            LINKER.defaultLookup().lookup("malloc").get(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
+
+    public static void freeMemory(Addressable address) {
+        try {
+            FREE.invokeExact(address);
+        } catch (Throwable ex) {
+            throw new IllegalStateException(ex);
+        }
+    }
+
+    public static MemoryAddress allocateMemory(long size) {
+        try {
+            return (MemoryAddress)MALLOC.invokeExact(size);
+        } catch (Throwable ex) {
+            throw new IllegalStateException(ex);
+        }
+    }
+
+    public static Addressable findNativeOrThrow(String name) {
+        return SymbolLookup.loaderLookup().lookup(name).orElseThrow();
     }
 }
