@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,11 +24,11 @@
 /*
  * @test
  * @bug 8003881
- * @summary tests Lambda expression with a a security manager at top level
+ * @summary tests Lambda expression with a security manager at top level
  * @modules jdk.compiler
  * @compile -XDignore.symbol.file LambdaAccessControlTest.java LUtils.java
  *
- * @run main/othervm LambdaAccessControlTest
+ * @run main/othervm -Djava.security.manager=allow LambdaAccessControlTest
  */
 
 public class LambdaAccessControlTest extends LUtils {
