@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,6 +27,7 @@ import javax.swing.plaf.synth.SynthButtonUI;
 /*
  * @test
  * @bug 8043627
+ * @run main/othervm -Djava.security.manager=allow Test8043627
  * @summary Tests that SynthContext can be created with SecurityManager installed
  * @author Sergey Malenkov
  */
